Fix spacing of summary card actions when there are more than two
The current CSS only accounts for a maximum of two actions on summary cards, with the spacing between items collapsing if there are three or more.

For consistency and to reduce code footprint, changes how these actions are styled to use the same styles as the summary list actions.

--- a/packages/govuk-frontend/src/govuk/components/summary-list/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/summary-list/_index.scss
@@ -96,18 +96,21 @@
     padding: 0; // Reset default user agent styles
   }
 
-  .govuk-summary-list__actions-list-item {
+  .govuk-summary-list__actions-list-item,
+  .govuk-summary-card__action {
     display: inline-block;
   }
 
   @include govuk-media-query($until: tablet) {
-    .govuk-summary-list__actions-list-item {
+    .govuk-summary-list__actions-list-item,
+    .govuk-summary-card__action {
       margin-right: govuk-spacing(2);
       padding-right: govuk-spacing(2);
       border-right: 1px solid $govuk-border-colour;
     }
 
-    .govuk-summary-list__actions-list-item:last-child {
+    .govuk-summary-list__actions-list-item:last-child,
+    .govuk-summary-card__action:last-child {
       margin-right: 0;
       padding-right: 0;
       border: 0;
@@ -115,16 +118,19 @@
   }
 
   @include govuk-media-query($from: tablet) {
-    .govuk-summary-list__actions-list-item {
+    .govuk-summary-list__actions-list-item,
+    .govuk-summary-card__action {
       margin-left: govuk-spacing(2);
       padding-left: govuk-spacing(2);
     }
 
-    .govuk-summary-list__actions-list-item:not(:first-child) {
+    .govuk-summary-list__actions-list-item:not(:first-child),
+    .govuk-summary-card__action:not(:first-child) {
       border-left: 1px solid $govuk-border-colour;
     }
 
-    .govuk-summary-list__actions-list-item:first-child {
+    .govuk-summary-list__actions-list-item:first-child,
+    .govuk-summary-card__action:first-child {
       margin-left: 0;
       padding-left: 0;
       border: 0;
@@ -220,13 +226,6 @@
 
   .govuk-summary-card__action {
     display: inline;
-    margin: 0 govuk-spacing(2) 0 0;
-    padding-right: govuk-spacing(2);
-    border-right: 1px solid $govuk-border-colour;
-
-    @include govuk-media-query($from: "tablet") {
-      margin-right: 0;
-    }
 
     // We use the following media query to target IE11 and 10 only to add margin
     // between actions.
@@ -243,14 +242,6 @@
   }
 
   .govuk-summary-card__action:last-child {
-    margin: 0;
-    padding-right: 0;
-    border-right: none;
-
-    @include govuk-media-query($from: "tablet") {
-      padding-left: govuk-spacing(2);
-    }
-
     // See above comment for why this is here
     @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
       margin-bottom: 0;
